--- a/src/app/page/events-list/events-list.component.html
+++ b/src/app/page/events-list/events-list.component.html
@@ -1,4 +1,5 @@
 <div>
+  <button class="btn btn-success" routerLink="`${eventsUrl}/0`"></button>
   <div class="row my-2">
     <div class="col-10">
       <h3>All of the events should show below</h3>
@@ -28,6 +29,9 @@
           <div class="btn-group">
             <button [routerLink]="['event/' + event.id]" class="btn btn-info">
               <i class="fa fa-pencil"></i>
+            </button>
+            <button [routerLink]="['event/' + event.id]" (click)="onDelete(event)" class="btn btn-danger">
+              <i class="fa fa-delete"></i>
             </button>
 
           </div>
